--- a/styles.css
+++ b/styles.css
@@ -2,38 +2,56 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Arial', sans-serif;
-    background-color: rgb(75, 150, 75);
+    background-color: white;
     height: 100vh;
     overflow: auto;
 }
 
 header {
-    background-color: rgb(35, 58, 35);
-    color: rgb(75, 150, 75);
-    text-align: center;
-    padding: 0.2px;
-    font-size: 30px;
+    background-color: rgb(143, 195, 75);
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
 }
 
-h2 {
-    color: rgb(35, 58, 35);
-    text-align: center;
-    padding: 0;
-    font-size: 22px;
+.header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+h1 {
+    color: white;
+    text-align: left;
+    margin: 0;
+}
+
+.header-links {
+    display: flex;
+}
+
+.header-links a {
+    color: white;
+    text-decoration: none;
+    font-family: 'Arial', sans-serif;
+    margin-left: 15px;
+    margin-right: 5px;
+    font-size: 18px; 
 }
 
 .image-container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); 
-    gap: 125px; 
+    grid-template-columns: repeat(2, 1fr);
+    gap: 125px;
     margin-top: 75px;
     margin-left: 40px;
     margin-right: 40px;
 }
 
 .hover-image {
-    width: 100%; 
-    height: auto; 
+    width: 100%;
+    height: auto;
     transition: transform 0.4s ease-in-out;
 }
 
