--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 @media (max-width: 768px) { /* mobile */
+    
+
 body {
     margin: 0;
     padding: 0;
@@ -15,6 +17,12 @@ header {
     padding: 0;
 }
 
+h1 {
+    color: white;
+    text-align: left;
+    margin: 0;
+}
+
 .header-content {
     display: flex;
     justify-content: space-between;
@@ -22,11 +30,21 @@ header {
     padding: 10px;
 }
 
-h1 {
-    color: white;
-    text-align: left;
-    margin: 0;
+
+.intro-container {
+    max-width: 800px; 
+    margin: 0 auto; 
+    padding: 20px; 
 }
+
+.intro-title {
+    color:  rgb(143, 195, 75);;
+    margin-top: 5px;
+    margin-bottom: 5px ;
+    font-size: 22px;
+    text-align: center;
+}
+
 
 .header-links {
     display: flex;
@@ -35,20 +53,19 @@ h1 {
 .header-links a {
     color: white;
     text-decoration: none;
-    font-family: 'Junge', serif;
+    font-family: 'Junge', sans-serif;
     margin-left: 15px;
     margin-right: 5px;
     font-size: 18px; 
 }
 
 .background-image {
-    background-image: url('../iw.jpg'); 
+    background-image: url('iw.jpg'); 
     background-size: 50px;
     margin-top: 1px;
     background-repeat: repeat;
     height: 40px; 
 }
-
 
 .image-container {
     display: grid;
@@ -105,6 +122,23 @@ h1 {
     transform: scale(1.1);
 }
 
+footer {
+    text-align: center;
+    font-size: 10px;
+    color: #555;
+}
+
+.view-more {
+    text-align: center;
+    margin-top: 15px;
+}
+
+.view-more img {
+    height: 150px;
+    width: 150px; 
+    cursor: pointer;
+}
+
 .modal-container {
     display: none;
     position: fixed;
@@ -131,7 +165,7 @@ h1 {
     font-size: 30px;
     color: white;
     cursor: pointer;
-    }
+    }          
 }
 
 /* -----------------------------------------------*/
@@ -153,6 +187,12 @@ h1 {
         padding: 0;
     }
     
+    h1 {
+        color: white;
+        text-align: left;
+        margin: 0;
+    }
+    
     .header-content {
         display: flex;
         justify-content: space-between;
@@ -160,11 +200,21 @@ h1 {
         padding: 10px;
     }
     
-    h1 {
-        color: white;
-        text-align: left;
-        margin: 0;
+    
+    .intro-container {
+        max-width: 800px; 
+        margin: 0 auto; 
+        padding: 20px; 
     }
+    
+    .intro-title {
+        color:  rgb(143, 195, 75);;
+        margin-top: 5px;
+        margin-bottom: 5px ;
+        font-size: 22px;
+        text-align: center;
+    }
+    
     
     .header-links {
         display: flex;
@@ -173,20 +223,19 @@ h1 {
     .header-links a {
         color: white;
         text-decoration: none;
-        font-family: 'Junge', serif;
+        font-family: 'Junge', sans-serif;
         margin-left: 15px;
         margin-right: 5px;
         font-size: 18px; 
     }
     
     .background-image {
-        background-image: url('../iw.jpg'); 
+        background-image: url('iw.jpg'); 
         background-size: 50px;
         margin-top: 1px;
         background-repeat: repeat;
         height: 40px; 
     }
-    
     
     .image-container {
         display: grid;
@@ -243,6 +292,23 @@ h1 {
         transform: scale(1.1);
     }
     
+    footer {
+        text-align: center;
+        font-size: 10px;
+        color: #555;
+    }
+    
+    .view-more {
+        text-align: center;
+        margin-top: 15px;
+    }
+    
+    .view-more img {
+        height: 150px;
+        width: 150px; 
+        cursor: pointer;
+    }
+    
     .modal-container {
         display: none;
         position: fixed;
@@ -269,5 +335,5 @@ h1 {
         font-size: 30px;
         color: white;
         cursor: pointer;
-        }
     }
+}
